--- a/SiDokter/appsettings.json
+++ b/SiDokter/appsettings.json
@@ -14,11 +14,18 @@
     "Index": "dokterku",
     "Hosts": "https://opensearch-node1:9200,https://opensearch-node2:9200"
   },
+  "AppSettings": {
+    "Secret": "INI_RAHASIA_LHOOOOOO_TAMBAHIN_PANGJANG_LAGI_TUUUUUUUU"
+  },
   "Kestrel": {
     "Endpoints": {
-      "Http": {
-        "Url": "http://*:8000"
+        "Https": {
+        "Url": "https://*:8001",
+        "Certificate": {
+          "Path": "./certificate.pfx",
+          "Password": "Qwerty@21"
+        }
       }
     }
-  }
+ }
 }
