Move auth to program

--- a/SiDokter/appsettings.json
+++ b/SiDokter/appsettings.json
@@ -17,6 +17,8 @@
   "AppSettings": {
     "Secret": "INI_RAHASIA_LHOOOOOO_TAMBAHIN_PANGJANG_LAGI_TUUUUUUUU"
   },
+  "AuthBase": "http://sidokterdocker-sidokterauthapp-1:8010/auth/User",
+  "AuthBaseDev": "https://localhost:7037/auth/User",
   "Kestrel": {
     "Endpoints": {
         "Https": {
